--- a/petstore-persistence/src/test/resources/log4j.properties
+++ b/petstore-persistence/src/test/resources/log4j.properties
@@ -12,3 +12,4 @@ log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - 
 log4j.logger.org.hibernate=WARN
 log4j.logger.org.hibernate.transaction=DEBUG
 log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.com.carbonfive.db.migration=DEBUG
