--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 
     <dependencyManagement>
         <dependencies>
+	        <dependency>
+	            <groupId>com.carbonfive.db-support</groupId>
+	            <artifactId>db-migration</artifactId>
+	            <version>0.9.9-m2</version>
+	            <scope>test</scope>
+	        </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
