Switched to field access for entities Added test support classes to assert equality accross persistence Added proper to string to entities to make assertion messages readable

--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -17,5 +17,9 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
     </dependencies>
 </project>
