--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
     </servlet-mapping>
 	<servlet-mapping>
     	<servlet-name>default</servlet-name>
-        <url-pattern>/css/*</url-pattern>
+        <url-pattern>/stylesheets/*</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
