moved velocity rendering stuff to test helper class

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -23,6 +23,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>petstore-persistence</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>        
+        <dependency>
         	<groupId>com.3levers.cssselectors</groupId>
             <artifactId>cssselectors</artifactId>
         </dependency>
