search results show product photos.

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -65,6 +65,10 @@
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
 	</dependencies>
 
     <build>
