--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
                 <version>5.1.11</version>
                 <scope>runtime</scope>
             </dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>1.4</version>
+			</dependency>
         </dependencies>
     </dependencyManagement>
 
