--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -19,7 +19,7 @@
 		</dependency>	
         <dependency>
             <groupId>com.pyxis</groupId>
-            <artifactId>petstore-persistence</artifactId>
+            <artifactId>petstore-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
