--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>petstore-persistence</artifactId>
+            <artifactId>petstore-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
