--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>petstore-domain</module>
-        <module>petstore-persistence</module>
+        <module>petstore-infrastructure</module>
         <module>petstore-app</module>
         <module>petstore-system-tests</module>
     </modules>
