Attachments are now stored with public web files

--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,10 @@
     	<servlet-name>default</servlet-name>
         <url-pattern>/images/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/attachments/*</url-pattern>
+    </servlet-mapping>
 	<servlet-mapping>
     	<servlet-name>default</servlet-name>
         <url-pattern>/stylesheets/*</url-pattern>
