--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>petstore-persistence</artifactId>
+            <artifactId>petstore-infrastructure</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
