--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>petstore-infrastructure</artifactId>
+            <artifactId>petstore-domain</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
