--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -26,6 +26,13 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>petstore-domain</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>petstore-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
