--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -20,6 +20,10 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
