--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -28,6 +28,10 @@
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+	    	<groupId>com.pyxis</groupId>
+	    	<artifactId>hamcrest-matchers</artifactId>
         </dependency>        
         <dependency>
         	<groupId>com.3levers.cssselectors</groupId>
