--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -39,6 +39,10 @@
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+	    	<groupId>com.pyxis</groupId>
+	    	<artifactId>hamcrest-matchers</artifactId>
         </dependency>        
         <dependency>
             <groupId>org.springframework</groupId>
