--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -32,6 +32,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+	    	<groupId>com.pyxis</groupId>
+	    	<artifactId>hamcrest-matchers</artifactId>
+        </dependency>        
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>petstore-infrastructure</artifactId>
             <version>${project.version}</version>
