--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,13 @@
 	            <artifactId>cssselectors</artifactId>
 	            <version>1.1</version>
 	            <scope>test</scope>
-	        </dependency>            
+	        </dependency>
+	        <dependency>
+	        	<groupId>com.pyxis</groupId>
+	        	<artifactId>hamcrest-matchers</artifactId>
+	        	<version>1.0-SNAPSHOT</version>
+	        	<scope>test</scope>
+	        </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
