--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 	        <dependency>
 	        	<groupId>com.pyxis</groupId>
 	        	<artifactId>hamcrest-matchers</artifactId>
-	        	<version>1.1</version>
+	        	<version>1.2-SNAPSHOT</version>
 	        	<scope>test</scope>
 	        </dependency>
             <dependency>
