--- a/pom.xml
+++ b/pom.xml
@@ -164,12 +164,17 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>3.3.0.GA</version>
+                <version>3.5.0-CR-2</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-annotations</artifactId>
-                <version>3.4.0.GA</version>
+                <version>3.5.0-CR-2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>4.0.2.GA</version>
             </dependency>
             <dependency>
                 <groupId>javassist</groupId>
