--- a/petstore-app/src/main/resources/log4j.properties
+++ b/petstore-app/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log.dir=./logs
 
-log4j.rootLogger=INFO, stdout, logfile
+log4j.rootLogger=WARN, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
