--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -41,12 +41,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-	    	<groupId>com.pyxis</groupId>
-	    	<artifactId>hamcrest-matchers</artifactId>
-        </dependency>        
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
