--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
                 <scope>test</scope>
             </dependency>
 	        <dependency>
@@ -123,7 +123,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
                 <exclusions>
                     <exclusion>
                         <groupId>commons-logging</groupId>
@@ -134,32 +134,32 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
-                <version>3.0.0.RELEASE</version>
+                <version>3.0.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -184,7 +184,7 @@
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
-                <version>2.1_3</version>
+                <version>2.2</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
