Using new format for velocity toolbox. Defined a base url to use to construct relative urls. Using lowercase letter in velocity properties now that I found out it's possible.

--- a/petstore-app/src/test/resources/views.properties
+++ b/petstore-app/src/test/resources/views.properties
@@ -1,1 +1,2 @@
-templates.base.url = file://${project.basedir}/src/main/webapp/WEB-INF/velocity/ 
+templates.base.url = file://${project.basedir}/src/main/webapp/WEB-INF/velocity/
+velocity.config.url = file://${project.basedir}/src/main/webapp/WEB-INF/velocity.properties
