--- a/petstore-app/src/main/resources/log4j.properties
+++ b/petstore-app/src/main/resources/log4j.properties
@@ -17,3 +17,4 @@ log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - 
 
 log4j.logger.org.hibernate=WARN
 log4j.logger.org.springframework=INFO
+log4j.logger.org.apache.velocity=INFO
