Display cart items count in home page and link to cart details.

--- a/petstore-app/src/main/webapp/WEB-INF/velocity.properties
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity.properties
@@ -6,3 +6,7 @@ directive.foreach.iterator.name = hasNext
 # Default starting value of the loop
 # counter variable reference.
 directive.foreach.counter.initial.value = 1
+
+# Access application, session and request attributes via standard setters, like in:
+#   #set($session.foo = 'bar') foo is: $session.foo
+runtime.introspector.uberspect = org.apache.velocity.util.introspection.UberspectImpl,org.apache.velocity.tools.view.WebappUberspector
