Speeded up system tests quite a bit by using a single firefox instance

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -73,7 +73,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
