--- a/petstore-app/src/main/webapp/WEB-INF/velocity.properties
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity.properties
@@ -10,3 +10,9 @@ directive.foreach.counter.initial.value = 1
 # Access application, session and request attributes via standard setters, like in:
 #   #set($session.foo = 'bar') foo is: $session.foo
 runtime.introspector.uberspect = org.apache.velocity.util.introspection.UberspectImpl,org.apache.velocity.tools.view.WebappUberspector
+
+# Use log4j logging
+runtime.log.logsystem.class = org.apache.velocity.runtime.log.Log4JLogChute
+runtime.log.logsystem.log4j.category=org.apache.velocity.runtime.log
+
+#runtime.log = velocity.log
