--- a/petstore-app/src/main/resources/log4j.properties
+++ b/petstore-app/src/main/resources/log4j.properties
@@ -16,5 +16,5 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] %-5p %c - %m%n
 
 log4j.logger.org.hibernate=WARN
-log4j.logger.org.springframework=INFO
-log4j.logger.org.apache.velocity=INFO
+#log4j.logger.org.springframework=INFO
+#log4j.logger.org.apache.velocity=INFO
