--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
 	            <scope>test</scope>
 	        </dependency>
             <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>3.0.1.RELEASE</version>
