Using new mvc-namespace to simplify spring mvc xml configuration

--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,10 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:dataSource.xml, classpath:persistence.xml</param-value>
+        <param-value>
+            classpath:dataSource.xml
+            classpath:persistence.xml
+        </param-value>
     </context-param>
 
     <listener>
