--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -77,6 +77,10 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.tuckey</groupId>
+            <artifactId>urlrewritefilter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
