--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-	    	<groupId>com.pyxis</groupId>
-	    	<artifactId>hamcrest-matchers</artifactId>
+            <groupId>com.pyxis</groupId>
+            <artifactId>hamcrest-matchers</artifactId>
             <version>1.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
@@ -84,6 +84,24 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -114,16 +132,22 @@
                 <version>3.0.1.RELEASE</version>
                 <scope>test</scope>
             </dependency>
-	        <dependency>
-	        	<groupId>com.3levers.cssselectors</groupId>
-	            <artifactId>cssselectors</artifactId>
-	            <version>1.1</version>
-	            <scope>test</scope>
-	        </dependency>
+            <dependency>
+                <groupId>com.3levers.cssselectors</groupId>
+                <artifactId>cssselectors</artifactId>
+                <version>1.1</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.4</version>
+            </dependency>
+            <!--  URL Rewrite -->
+            <dependency>
+                <groupId>org.tuckey</groupId>
+                <artifactId>urlrewritefilter</artifactId>
+                <version>3.1.0</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -175,6 +199,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-annotations</artifactId>
                 <version>3.5.0-CR-2</version>
+            </dependency>
+            <!--  JSR 303 with Hibernate Validator -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.0.0.GA</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -230,11 +260,11 @@
                 <version>5.1.11</version>
                 <scope>runtime</scope>
             </dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>1.4</version>
-			</dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -291,21 +321,21 @@
             </activation>
         </profile>
     </profiles>
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>${pyxis.distributionManagement.repository.id}</id>
-			<url>${pyxis.distributionManagement.repository.url}</url>
-		</repository>
-		<snapshotRepository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>${pyxis.snapshot.distributionManagement.repository.id}</id>
-			<url>${pyxis.snapshot.distributionManagement.repository.url}</url>
-		</snapshotRepository>
-		<downloadUrl>${pyxis.distributionManagement.downloadUrl}</downloadUrl>
-	</distributionManagement>
-	<scm>
-		<connection>scm:git:git://github.com/mathibodeau/petstore.git</connection>
-		<url>scm:git:git://github.com/mathibodeau/petstore.git</url>
-	</scm>
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>${pyxis.distributionManagement.repository.id}</id>
+            <url>${pyxis.distributionManagement.repository.url}</url>
+        </repository>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>${pyxis.snapshot.distributionManagement.repository.id}</id>
+            <url>${pyxis.snapshot.distributionManagement.repository.url}</url>
+        </snapshotRepository>
+        <downloadUrl>${pyxis.distributionManagement.downloadUrl}</downloadUrl>
+    </distributionManagement>
+    <scm>
+        <connection>scm:git:git://github.com/mathibodeau/petstore.git</connection>
+        <url>scm:git:git://github.com/mathibodeau/petstore.git</url>
+    </scm>
 </project>
