--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -49,12 +49,12 @@
 
     <!-- Enables clean URLs with JSP views e.g. /welcome instead of /app/welcome -->
     <filter>
-        <filter-name>UrlRewriteFilter</filter-name>
+        <filter-name>urlRewriteFilter</filter-name>
         <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
     </filter>
 
     <filter-mapping>
-        <filter-name>UrlRewriteFilter</filter-name>
+        <filter-name>urlRewriteFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
@@ -64,10 +64,10 @@
         <init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-				/WEB-INF/petstore-servlet.xml
+                /WEB-INF/petstore.xml
                 classpath:dataSource.xml
                 classpath:persistence.xml
-			</param-value>
+            </param-value>
 		</init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
