--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -93,6 +93,10 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <webdriver.factory.class>test.support.com.pyxis.petstore.web.SharedInstanceWebDriverFactory</webdriver.factory.class>
+    </properties>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -140,6 +144,7 @@
                         <include>**/*Feature.java</include>
                     </includes>
                     <systemPropertyVariables>
+                        <webdriver.factory.class>${webdriver.factory.class}</webdriver.factory.class>
                         <server.port>${server.port}</server.port>
                         <app.context>${app.context}</app.context>
                     </systemPropertyVariables>
